Fix vertical align on mobile

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -76,7 +76,7 @@ a img:hover {
 
 .site-wrapper-inner {
   display: table-cell;
-  vertical-align: top;
+  vertical-align: middle;
 }
 
 .cover-container {
